website/themes/karibou/default2.css
.colonnes .colonne {
	padding: 0px;
	margin: 0px;
	min-height: 50px;
	float: left;
	z-index: 5;
}

.colonnes {
	width: 100%;
	z-index: 1;
}

.tabsSettings .slider {
	width: 100%;
	background-color: white;
	height: 14px;
	position: relative;
	margin-left: 2px;
	margin-right: -4px;
}

.tabsSettings .slider .handle {
	width: 7px;
	height: 14px;
	background-image: url("images/arrow_slider.png");
	cursor: move;
	position: absolute;
}

#default2-addtabbutton{
    background: #EEF5F9;
    position: relative;
    padding: 3px;
    
}

#default2-addtabbutton-label{
    position: absolute;
    display: block;
    width: 100%;
    top: 4px;
    left: 3px;
    color: #323296;
    font-weight: bold;
    cursor: pointer;
    text-align: center;
}

#default2-addtabbutton-form{
    visibility: hidden;
    background: none;
    border: none;
    color: #323296;
    font-weight: bold;
    width: 100px;
}

#default2-addtabbutton-hint{
    visibility: hidden;
    position: absolute;
    margin-top: -100px;
    background: #EEF5F9;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    border: solid 2px #99ccff;
    padding: 5px;
    font-weight: bold;
}

.default2-tabs-modify{
	margin: 10px;
}

.default2-tabs-modify .default2-tabs-addtab,.default2-tabs-modify .default2-tabs-removetab{
    background: #EEF5F9;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    border: solid 2px #99ccff;
}

.default2-tabs-modify .default2-tabs-addtab:hover,.default2-tabs-modify .default2-tabs-removetab:hover{
    background-color: #5c96cc;
    color: white;
}

#tabsBar span {
	margin-left: 5px;
	margin-right: 5px;
	background-color: #EEF5F9;
	cursor: pointer;
}

#tabsBar {
	border-bottom: solid 2px #99ccff;
	padding: 0px;
	margin: 0px;
}

#tabsBar > li{
    -moz-border-radius: 5px 5px 0px 0px;
    -webkit-border-radius: 5px 5px 0px 0px;
    border-radius: 5px 5px 0px 0px;
    border: solid 2px #99ccff;
    border-bottom: none;
    list-style: none;
    display: inline-block;
    margin-right: 10px;
}

#tabsBar > li > a{
    display: inline-block;
    min-width: 70px;
    text-align: center;
    padding: 3px;
    cursor: pointer;
}

#tabsBar .activeTabLink {
    background-color: #5c96cc;
    color: white;
}

#taskBar a{
    color: black;
}

#tabsBar .activeTabLink a{
    color: white;
}

.handle {
	cursor: move;
}

.calendar_link {
	width: 20px;
	height: 20px;
	position: absolute;
	background-image: url("images/calendar_open.png");
}

.calendar_link .text {
	display: none;
}

.appRootContainer {
	/*
	Problème ici avec IE7...
	*/
	background-color: white;
	margin: 2px;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border-radius: 5px;
	border: solid 1px #99ccff;
	/*float: none;
	position: relative;
	width: 200px;
	z-index: 3;
	left: 30px;*/
}

.appBox {
	position: relative;
	padding: 4px;
/*	width: 200px;
	left: 0px;
	z-index: 4;*/
}

.appRootContainer .del {
	width: 16px;
	height: 16px;
	background-image: url("images/del.png");
	visibility: hidden;
}

.appRootContainer:hover .del {
	position: absolute;
	top: 1px;
	right: 5px;
	visibility: visible;
}

.appRootContainer .del .text {
	display: none;
}

.appRootContainer .shade {
        width: 16px;
        height: 16px;
        background-image: url("images/shade.png");
        visibility: hidden;
}

.appRootContainer:hover .shade {
	position: absolute;
	top: 1px;
	right: 25px;
	visibility: visible;
}

.appRootContainer .shade .text {
	display: none;
}

.appRootContainer .detach {
        width: 16px;
        height: 16px;
        background-image: url("images/detach.png");
        visibility: hidden;
}

.appRootContainer:hover .detach {
	position: absolute;
	top: 1px;
	right: 45px;
	visibility: visible;
}

.appRootContainer .detach .text {
	display: none;
}
.appRootContainer .submit {
        width: 16px;
        height: 16px;
        background-image: url("images/submit.png");
        visibility: hidden;
}

.appRootContainer:hover .submit {
	position: absolute;
	top: 1px;
	left: 25px;
	visibility: visible;
}

.appRootContainer .submit .text {
	display: none;
}

.appRootContainer .config {
        width: 16px;
        height: 16px;
        background-image: url("images/edit.png");
        visibility: hidden;
}

.appRootContainer:hover .config {
	position: absolute;
	top: 1px;
	left: 42px;
	visibility: visible;
}

.appRootContainer .config .text {
	display: none;
}
.appRootContainer .update {
        width: 16px;
        height: 16px;
        background-image: url("images/update.png");
        visibility: hidden;
}

.appRootContainer:hover .update {
	position: absolute;
	top: 1px;
	left: 5px;
	visibility: visible;
}

.appRootContainer .update .text {
	display: none;
}

.appRootContainer .overBox {
	background-color: black;
	color: white;
	display: block;
	height: 100%;
	opacity: 0.85;
	position: absolute;
	right: 0;
	top: 0px;
	width: 100%;
	z-index: 10;
	overflow: auto;
}

#homeAppAdder {
	z-index: 10;
	margin: auto;
	position: absolute;
	right: 0px;
	top: 100px;
	background: #EEF5F9;
	-moz-border-radius: 5px;
	-webkit-border-radius: 5px;
	border-radius: 5px;
	border: solid 2px #99ccff;
	width: 400px;
	opacity: 0.95;
	color: white;
	color: #323296;
}

#homeAppList {
	overflow-y: auto;
	max-height: 500px;
	list-style: none;
	margin: 0;
	padding: 0;
}

#homeAppList li{
	display: block;
	border-bottom: solid gray 1px;
	padding: 3px;
	width: 370px;
	text-align: center;
}

.default2-applist-appname{
    display: block;
    
    font-weight: bold;
}

.default2-applist-appdescription{

}

#homeAppAddButton {
	right: 10px;
	position: absolute;
}

#homeAppAddCloseButton {
	position: absolute;
	top: 0px;
	right: 0px;
}

input[type=button],input[type=submit],input[type=reset]{
    background: #EEF5F9;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    border: solid 2px #99ccff;
    color: RGB(50,50,150);
    font-weight:bold;
}

input[type=button]:hover,input[type=submit]:hover,input[type=reset]:hover{
    background-color: #5c96cc;
    color: white;
}

.default2_customize{
    /*background: RGB(250,250,250);
    border:1px solid #B2DFFF;
    color: RGB(50,50,150);
    font-weight:bold;*/
	margin-top: 10px;
}

.default2_customize > a,.default2_customize > a:visited{
    background: #EEF5F9;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    border: solid 2px #99ccff;
    padding: 5px;
    margin-top: 20px;
    color: #323296;
    font-weight: bold;

}

#customizeSection{
    position: absolute;
    background: #EEF5F9;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    border-radius: 5px;
    border: solid 2px #99ccff;
    padding: 5px;
    margin-top: 8px;

}

.default2_customize > a:hover{
    background-color: #5c96cc;
    color: white;
}

